@@ -1447,10 +1447,11 @@ static inline CGFloat bezierat( float a, float b, float c, float d, ccTime t )
 				[[NSNotificationCenter defaultCenter] postNotificationName:CCAnimationFrameDisplayedNotification object:target_ userInfo:dict];
 
 			nextFrame_ = i+1;
-
-			break;
 		}
-	}	
+		// Issue 1438. Could be more than one frame per tick, due to low frame rate or frame delta < 1/FPS
+		else
+			break;
+	}
 }
 
 - (CCActionInterval *) reverse
